Fixes: - Fixed <th> of <thead> in .wdn_responsive_table.flush-left to text align left instead of centered due to specificity overrides - Changed color and background color of <th> in <tbody> to resolve contrast issues for the different table color varieties.

--- a/wdn/templates_4.1/less/layouts/tables.less
+++ b/wdn/templates_4.1/less/layouts/tables.less
@@ -143,7 +143,7 @@ table.wdn_responsive_table {
 
         &.flush-left {
 
-            th,
+            thead th,
             td {
                 text-align: left;
             }
